@@ -2,6 +2,7 @@ package com.virnect.smic.daemon.service;
 
 import java.util.List;
 import java.util.concurrent.Callable;
+import java.util.stream.Collectors;
 
 import org.apache.commons.lang3.time.StopWatch;
 import org.eclipse.milo.opcua.sdk.client.OpcUaClient;
@@ -36,7 +37,7 @@ public class ReadServiceRunnable implements Runnable{
 		log.info("******************** batch run starts");
 		tasks.parallelStream().forEach(task -> {
 
-			List<Tag> targetTagas = tags.stream().filter(tag -> tag.getTask().getId().equals(task.getId())).toList();
+			List<Tag> targetTagas = tags.stream().filter(tag -> tag.getTask().getId().equals(task.getId())).collect(Collectors.toList());
 			
 			log.info("task starts : "  + targetTagas.get(0).getTask().getName() );
 			StopWatch watcher = new StopWatch();
